--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
   - "8"
 
 before_script:
-  - npm install -g truffle-hdwallet-provider
+  - cd client/
+  - npm install && cd ..
   - npm install -g ganache-cli
   - npm install -g truffle@5.0.0
 
