--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dev-bootcamp-2019.github.io/final-project-DipanshKhandelwal/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "openzeppelin-solidity": "^2.1.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -15,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
