--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://dev-bootcamp-2019.github.io/final-project-DipanshKhandelwal/",
   "dependencies": {
     "gh-pages": "^2.0.1",
+    "ipfs-http-client": "^29.1.0",
     "openzeppelin-solidity": "^2.1.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
